--- a/public/individual.css
+++ b/public/individual.css
@@ -73,3 +73,12 @@ img {
     padding: 0 10px;
   }
 }
+
+
+#chart {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: #f9f9f9;
+}
