--- a/views/individual-stock.ejs
+++ b/views/individual-stock.ejs
@@ -97,6 +97,7 @@
           </div>
           <div class="modal-body">
             <p>1000 Rupees Will be Charged for Service</p>
+            <p style="color: red;">Note : The tip will be visible for 7 seconds only</p>
           </div>
           <div id="tip-message" style="display: none;">
             <h3 class="mt-3 ml-3">Tip Message</h3>
